style.css
*{
    box-sizing:border-box;
    margin:0;
    font-family: 'Roboto', sans-serif;
}

body{
    background-color:#FAF9F6
}
.container{
    display:flex;
    flex-direction:column;
}

.apexGrid{
    --gap: 2em;
    gap: var(--gap);
    display:grid;
    grid-template-columns:repeat(4, 1fr);
    grid-template-rows:auto;
    margin:5rem 10rem;
    height:100%;
}


#legendBox{
    display:flex;
    justify-content: center;
    align-items:center;
    margin:5rem;
    display:none;
}


.navbar{
    position:fixed;
    background-color:black;
    width:100%;
    height:5rem;
    display:flex;
    flex-direction: row;
    justify-content:space-between;
    align-items: center;
    padding:0rem 4rem;
    z-index:1;
}


.navbar .logo, .navbar .items{
    color:white;
    text-decoration: none;
    list-style-type: none;
    display:flex;
    flex-direction: row;
}
.buttonDiv{
    display:flex;
    justify-content: center;
    align-items: center;
    
}

.buttonDiv button{
    height:50px;
    width: 100px;
    border-radius: 10px;
    border: none;
    background-color: #f14b00;
}
.buttonDiv button:hover{
    transition: .5s;
    scale:1.1
}

.headerText{
    color:#A99F96;
    font-size:3rem;
    margin-top:6rem;
    margin-left:73px;
}
div.legend{
    font-family: 'Raleway', Arial, sans-serif;
    position: relative;
    overflow: hidden;
    margin: 10px;
    min-width: 220px;
    max-width: 398px;
    /* max-height: 945px; */
    width: 100%;
    background: #000000;
    color: #ffffff;
    text-align: center;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
}

div.legend *{
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
}

.legend{
    border:1px solid #DDA77B;
    border-radius: 10px;
    margin:5rem;
    height:945px;
}
div.legend img{
    max-width: 100%;
    position: relative;
    opacity: 0.4;
}


div.legend .legendOne{
    position: absolute;
    top:0;
    bottom:0;
    right:0;
    left:0;
}

div.legend h2 {
    position: absolute;
    left: 40px;
    right: 40px;
    display: inline-block;
    background: #000000;
    transform: skew(-10deg) rotate(-10deg) translate(0, -50%);
    padding: 12px 5px;
    margin: 0;
    top: 50%;
    text-transform: uppercase;
    font-weight: 400;
    }
    
div.legendOne h2 span{
    font-weight:800;
}

div.legend:before{
    height: 36%;
    width: 12%;
    top: 254px;
    left: 9px;
    content: '';
    background: #ffffff;
    position: absolute;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    -webkit-transform: rotate(110deg) translateY(-50%);
    transform: rotate(108deg) translateY(-51%);
    }

div.legend.blue{
    background-color: #123851;
}


div.legend img{
    opacity: .7;
}

div.legend:hover img{
    opacity:1;
    transform: scale(1.1);
} 

.apexGrid .legend{
    border: none;
    border-radius:.5rem;
    outline-offset: calc(var(--gap) * 0.2);
    outline: 4px solid transparent;
    transition:all .3s ease-in-out
}

.apexGrid .legend.selected{
    outline-color: #f14b00
}


div.legend:hover:before,
div.legend.hover:before{
    -webkit-transform: rotate(110deg) translateY(-150%);
    transform: rotate(110deg) translateY(-150%);
}
div.legend:hover h2,
div.legend.hover h2{
    -webkit-transform: skew(-10deg) rotate(-10deg) translate(-150%, -50%);
    transform: skew(-10deg) rotate(-10deg) translate(-150%, -50%);
}

#legend1, #legend2, #legend3, #legend4{
    height:775px;
    width:100%;
    object-fit: cover;
    transition:.5s ease;
}
.legendStyle{
    height:775px;
    width:100%;
    object-fit: cover;
    transition:.5s ease;
}


.legendInfo p{
    display: none;
}
.legendInfo:hover p{
    display:block;
    color:black;
}


/* #legend1:hover, #legend2:hover, #legend3:hover, #legend4:hover{
    opacity:.3;

} */
.legend img{
    border-radius:10px 10px 0px 0px;
}

.legend h2{
    color:#37123C;
    margin-top:8px;
    margin-left:25px;
    display:inline;
}


.legendInfo{
    display:flex;
    height:19%;
    flex-direction:column;
    justify-content: space-around;
    padding-top:1rem;
    background-color:#71677C;
    border-radius:10px 0px 10px 10px;
    transition:all .5s;
    padding-bottom:2rem;
    align-items:center;
}

.legendInfo:hover{
    background-color: white;
    margin-top:0rem;
    padding-bottom:8rem;

}

.legendInfo img{
    height:42px;
    border-radius:10px;
}

.legendInfo:hover img{
    display: none;
}



/* {
    0% { opacity: 0; filter: brightness(1) blur(20px) }
    10% { opacity: 1; filter: brightness(2) blur(10px) }
    100% { opacity: 1; filter: brightness(1) blur(0) }
  } */

